// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadioInput should be rendered correctly 1`] = `
<label
  className="container root size-18"
>
  <input
    aria-checked={null}
    checked={null}
    className="uui-radioinput"
    onChange={[Function]}
    tabIndex={0}
    type="radio"
  />
</label>
`;

exports[`RadioInput should be rendered correctly 2`] = `
<label
  className="container root size-18"
>
  <input
    aria-checked={null}
    checked={null}
    className="uui-radioinput"
    onChange={[Function]}
    tabIndex={0}
    type="radio"
  />
  <span
    className="uui-input-label"
    role="label"
  >
    Open
  </span>
</label>
`;
